add more java 21 examples